--- a/app.css
+++ b/app.css
@@ -96,24 +96,33 @@ p {
 .grid-item h3 {
     font-size: 2em;
     color: #eee;
+    position: relative;
+    z-index: 1;
 }
 
 .grid-item img {
     max-width: 100%;
     padding-bottom: 1em;
+    position: absolute;
+    left: 0;
+    z-index: 0;
+    opacity: .8;
 }
 
 .grid-item p {
     background: rgba(000,000,000, .3);
-    position: absolute;
+    position: relative;
+    z-index: 1;
     bottom: 0;
     width: 100%;
     padding: 0.8em 0.8em 1.8em;
     margin:0;
     box-sizing: border-box;
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: 600;
+    line-height: 1.5;
     color: #fff;
+    text-align: left;
 }
 
 /* Form Styles */
